# rustagent

./: Cargo.toml  README.md  agent_flow.json  agent_flow_campaign.json  test_ollama.rs  test_simple.rs
docs/: postman_collection.json  remote_http_agent.postman_collection.json
src/: agent.rs  api.rs  config.rs  lib.rs  main.rs  pdf_reader.rs  rag.rs  server.rs
