[package]
name = "agentic_rag_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
ollama-rs = "0.1.9"
llm  = "1.2.4"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
pdf-extract = "0.6"
qdrant-client = "1.9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
